# merch-shop/app/Http/Controllers/Web/ProductController.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Controllers\Web;
+
+use App\Http\Controllers\Controller;
+use App\Models\Product;
+use Illuminate\Contracts\Foundation\Application;
+use Illuminate\Contracts\View\Factory;
+use Illuminate\Contracts\View\View;
+use Illuminate\Http\Request;
+
+class ProductController extends Controller
+{
+    public function index(Request $request, string $slug): View|Factory|Application
+    {
+        $product = Product::query()
+            ->with('productCategory', 'sortedAttributeValues.productAttribute')
+            ->where('slug', $slug)
+            ->first();
+
+        if ($product === null) {
+            abort(404);
+        }
+
+        return view('product.index', ['product' => $product]);
+    }
+}
