# merch-shop/app/Models/ProductCategory.php
@@ -3,30 +3,15 @@
 namespace App\Models;
 
 use Cviebrock\EloquentSluggable\Sluggable;
+use Exception;
+use Illuminate\Database\Eloquent\Builder;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Support\Collection;
 
-/**
- * App\Models\ProductCategory
- *
- * @property int $id
- * @property string $name
- * @property string $slug
- * @property int|null $parent_id
- * @property \Illuminate\Support\Carbon|null $created_at
- * @property \Illuminate\Support\Carbon|null $updated_at
- * @method static \Database\Factories\ProductCategoryFactory factory(...$parameters)
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory newModelQuery()
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory newQuery()
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory query()
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory whereCreatedAt($value)
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory whereId($value)
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory whereName($value)
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory whereParentId($value)
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory whereSlug($value)
- * @method static \Illuminate\Database\Eloquent\Builder|ProductCategory whereUpdatedAt($value)
- */
+
+
 class ProductCategory extends Model
 {
     use HasFactory, Sluggable;
@@ -43,5 +28,34 @@ class ProductCategory extends Model
     public function children(): HasMany
     {
         return $this->hasMany(self::class, 'parent_id');
+    }
+
+    public function products(): HasMany
+    {
+        return $this->hasMany(Product::class);
+    }
+
+    /**
+     * @throws Exception
+     */
+    public static function getTreeProductBuilder(Collection $categories): Builder
+    {
+        if ($categories->isEmpty()) {
+            throw new Exception('Empty categories collection');
+        }
+        $categoryIds = [];
+
+        $collectCategoryIds = function (ProductCategory $category) use (&$categoryIds, &$collectCategoryIds) {
+            $categoryIds[] = $category->id;
+            foreach ($category->children as $childCategory) {
+                $collectCategoryIds($childCategory);
+            }
+        };
+
+        foreach ($categories as $category) {
+            $collectCategoryIds($category);
+        }
+
+        return Product::query()->whereIn('product_category_id', $categoryIds);
     }
 }
